<resources>
    <string name="app_name">Github User (Yudha Dicoding)</string>
    <string name="users_name">Users Name</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="total">5000</string>
    <string name="menu_search">Search</string>
    <string name="menu_about">About</string>
    <string name="search_hint">Enter the word</string>
    <string name="avatar">avatar</string>
    <string name="dev_email">yudhakautsar20@gmail.com</string>
    <string name="dev_name">Muhammad Yudha Kautsar</string>
    <string name="change_language_settings">Change Language</string>
</resources>