<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/menu_search"
        android:icon = "@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"  />
    <group>
        <item android:id="@+id/about"
            android:title="@string/menu_about"
            app:showAsAction="never"
            android:icon="@drawable/ic_baseline_info_24"/>
        <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings"
            app:showAsAction="never"/>
    </group>
</menu>